[gd_scene load_steps=8 format=2]

[ext_resource path="res://ASSERTS/inside/shop1.png" type="Texture" id=1]
[ext_resource path="res://menu/Store1.gd" type="Script" id=2]
[ext_resource path="res://ASSERTS/inside/confirmation_001.ogg" type="AudioStream" id=3]
[ext_resource path="res://ASSERTS/inside/pixel.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://ASSERTS/inside/icielBrandonText-Bold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 17
font_data = ExtResource( 5 )

[node name="Store1" type="Node2D"]
script = ExtResource( 2 )

[node name="Shop1" type="Sprite" parent="."]
position = Vector2( 526.333, 300.25 )
scale = Vector2( 0.555093, 0.555093 )
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 892.0
margin_top = 538.0
margin_right = 998.0
margin_bottom = 582.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Le" type="Button" parent="."]
margin_left = 570.0
margin_top = 73.0
margin_right = 747.0
margin_bottom = 275.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 8.0
margin_top = 67.0
margin_right = 128.0
margin_bottom = 89.0
custom_colors/font_color = Color( 0.560784, 0.372549, 0.294118, 1 )
custom_fonts/font = SubResource( 1 )
text = "#####"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy" type="Button" parent="."]
margin_left = 108.0
margin_top = 446.0
margin_right = 239.0
margin_bottom = 479.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 75.0
margin_top = 30.0
margin_right = 221.0
margin_bottom = 55.0
custom_colors/font_color = Color( 0.560784, 0.372549, 0.294118, 1 )
custom_fonts/font = SubResource( 2 )
text = "###"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button_Le" to="." method="_on_Button_Le_pressed"]
[connection signal="pressed" from="Buy" to="." method="_on_Buy_pressed"]
